<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="quantity">Quantity</string>
    <string name="number">0</string>
    <string name="price">Order Summary</string>
    <string name="total">$0</string>
    <string name="order">Order</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="javaToppings">Toppings:</string>
    <string name="javaName">Name: <xliff:g id="name" example="Sydney">%s</xliff:g></string>
    <string name="javaQuantity">Quantity:</string>
    <string name="javaPrice">Total: $</string>
    <string name="thankYou">Thank You!</string>
    <string name="none">None</string>
    <string name="whipped_cream">Whipped Cream</string>
</resources>
